# ilmn2ped

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  map.rs  report.rs
src/report/: map.rs
test/: map.csv  map.tsv  test.csv  test.tsv  test2.tsv
