[package]
name = "ilmn2ped"
version = "0.1.0"
authors = ["Andrea Talenti"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RenzoTale88/ilmn2ped"
readme = "README.md"
keywords = ["Illumina", "genotypes", "plink", "ped", "map"]
categories = ["bioinformatics"]

[dependencies]
clap = "4.5.20"
